created forget password and many more changes

--- a/.env.sample
+++ b/.env.sample
@@ -48,3 +48,12 @@ saltValue=16
 #LoginValitationTime
 validTime=10
 ValidForm=minutes
+
+otpExpiryTime=5 #minutes
+teamName=Team
+companyName=company
+
+MAILGUN_API_KEY=API KEY
+MAILGUN_DOMAIN=example domain
+FROM_FORGET_PASSWORD_EMAIL="Forget Password<no-reply@example domain>"
+FROM_SIGN_UP_EMAIL="Sign Up<no-reply@example domain>"
