--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "npx tsc",
     "start": "npx tsc;pm2-runtime start ecosystem.config.js --env production",
     "dev": "pm2-runtime start ecosystem.config.js --env development",
-    "local": "nodemon src/index.ts"
+    "local": "nodemon src/index.ts",
+    "rough": "nodemon rough.ts"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +24,9 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "form-data": "^4.0.3",
     "jsonwebtoken": "^9.0.2",
+    "mailgun.js": "^12.0.2",
     "nodemon": "^3.1.10",
     "pg": "^8.16.0",
     "sequelize": "^6.37.7",
