--- a/.env.sample
+++ b/.env.sample
@@ -55,5 +55,5 @@ companyName=company
 
 MAILGUN_API_KEY=API KEY
 MAILGUN_DOMAIN=example domain
-FROM_FORGET_PASSWORD_EMAIL="Forget Password<no-reply@example domain>"
-FROM_SIGN_UP_EMAIL="Sign Up<no-reply@example domain>"
+FROM_FORGET_PASSWORD_EMAIL=Forget Password<no-reply@example domain>
+FROM_SIGN_UP_EMAIL=Sign Up<no-reply@example domain>
